# SimpleCanvas

./: CMakeLists.txt  LICENSE  README.md
include/simplecanvas/: simple_canvas.hpp
src/: CMakeLists.txt  simple_canvas.cpp
